--- a/index.html
+++ b/index.html
@@ -3,10 +3,78 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Mi primera web</title>
+  <title>TecnoExpress</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+
+    header {
+      background-color: #0d47a1;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #1565c0;
+    }
+
+    nav a {
+      color: white;
+      padding: 14px 20px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      background-color: #0d47a1;
+    }
+
+    main {
+      padding: 40px;
+      text-align: center;
+    }
+
+    footer {
+      background-color: #0d47a1;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
-  <h1>¡Hola mundo!</h1>
-  <p>Bienvenido a mi primera página web con GitHub Pages.</p>
+
+  <header>
+    <h1>Bienvenido a TecnoExpress</h1>
+    <p>Tu tienda de tecnología rápida y confiable</p>
+  </header>
+
+  <nav>
+    <a href="#">Inicio</a>
+    <a href="#">Productos</a>
+    <a href="#">Servicios</a>
+    <a href="#">Contacto</a>
+  </nav>
+
+  <main>
+    <h2>¿Qué es TecnoExpress?</h2>
+    <p>TecnoExpress es una plataforma dedicada a ofrecer soluciones tecnológicas, desde componentes hasta servicios técnicos de calidad.</p>
+    <p>Explora nuestro catálogo y descubre lo mejor en tecnología al mejor precio.</p>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 TecnoExpress. Todos los derechos reservados.</p>
+  </footer>
+
 </body>
 </html>
