--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
 </head>
 <body>
 
-  <header>
-    <h1>Bienvenido a TecnoExpress</h1>
-    <p>Tu tienda de tecnología rápida y confiable</p>
-  </header>
+<header>
+  <img src="img/logo.png" alt="Logo TecnoExpress" style="max-width: 150px; margin-bottom: 10px;" />
+  <h1>Bienvenido a TecnoExpress</h1>
+  <p>Tu tienda de tecnología rápida y confiable</p>
+</header>
+
 
   <nav>
     <a href="#">Inicio</a>
