--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
 
 <header>
-  <img src="img/logo.png" alt="Logo TecnoExpress" style="max-width: 150px; margin-bottom: 10px;" />
+  <img src="img/logo.jpg" alt="Logo TecnoExpress" style="max-width: 150px; margin-bottom: 10px;" />
   <h1>Bienvenido a TecnoExpress</h1>
   <p>Tu tienda de tecnología rápida y confiable</p>
 </header>
