--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     header {
       background-color: #0d47a1;
       color: white;
-      padding: 20px;
+      padding: 30px 20px;
       text-align: center;
     }
 
     nav {
       display: flex;
       justify-content: center;
-      background-color: #1565c0;
+      background-color: #1976d2;
     }
 
     nav a {
@@ -30,6 +30,7 @@
       padding: 14px 20px;
       text-decoration: none;
       font-weight: bold;
+      transition: background-color 0.3s ease;
     }
 
     nav a:hover {
@@ -46,12 +47,16 @@
       color: white;
       text-align: center;
       padding: 20px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
+      margin-top: 40px;
+    }
+
+    img {
+      max-width: 150px;
+      margin-bottom: 10px;
     }
   </style>
 </head>
+
 <body>
 
 <header>
