--- a/index.html
+++ b/index.html
@@ -5,81 +5,167 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TecnoExpress</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background-color: #f4f4f4;
       color: #333;
+      line-height: 1.6;
     }
 
     header {
       background-color: #0d47a1;
       color: white;
-      padding: 30px 20px;
+      padding: 40px 20px;
       text-align: center;
     }
 
+    header img {
+      max-width: 120px;
+      margin-bottom: 15px;
+    }
+
     nav {
-      display: flex;
-      justify-content: center;
       background-color: #1976d2;
+      padding: 10px 0;
+      text-align: center;
     }
 
     nav a {
       color: white;
-      padding: 14px 20px;
+      margin: 0 15px;
       text-decoration: none;
       font-weight: bold;
-      transition: background-color 0.3s ease;
+      transition: color 0.3s;
     }
 
     nav a:hover {
-      background-color: #0d47a1;
+      color: #cfd8dc;
     }
 
-    main {
-      padding: 40px;
+    .hero {
+      background: #e3f2fd;
+      padding: 60px 20px;
       text-align: center;
     }
 
-    footer {
+    .hero h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+      color: #0d47a1;
+    }
+
+    .hero p {
+      font-size: 1.2em;
+      margin-bottom: 20px;
+    }
+
+    .cta-button {
+      background-color: #0d47a1;
+      color: white;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 5px;
+      font-size: 1em;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .cta-button:hover {
+      background-color: #1565c0;
+    }
+
+    .section {
+      padding: 50px 20px;
+      text-align: center;
+    }
+
+    .section h2 {
+      color: #0d47a1;
+    }
+
+    .footer {
       background-color: #0d47a1;
       color: white;
       text-align: center;
-      padding: 20px;
-      margin-top: 40px;
+      padding: 30px 20px;
+      margin-top: 50px;
     }
 
-    img {
-      max-width: 150px;
-      margin-bottom: 10px;
+    @media (min-width: 768px) {
+      .section-content {
+        display: flex;
+        justify-content: space-around;
+        text-align: left;
+        max-width: 1000px;
+        margin: 0 auto;
+      }
+
+      .section-content div {
+        flex: 1;
+        margin: 0 20px;
+      }
     }
   </style>
 </head>
-
 <body>
 
-<header>
-  <img src="img/logo.jpg" alt="Logo TecnoExpress" style="max-width: 150px; margin-bottom: 10px;" />
-  <h1>Bienvenido a TecnoExpress</h1>
-  <p>Tu tienda de tecnología rápida y confiable</p>
-</header>
-
+  <header>
+    <img src="img/logo.png" alt="Logo TecnoExpress" />
+    <h1>TecnoExpress</h1>
+    <p>Tu tienda de tecnología rápida y confiable</p>
+  </header>
 
   <nav>
-    <a href="#">Inicio</a>
-    <a href="#">Productos</a>
-    <a href="#">Servicios</a>
-    <a href="#">Contacto</a>
+    <a href="#nosotros">Nosotros</a>
+    <a href="#servicios">Servicios</a>
+    <a href="#contacto">Contacto</a>
   </nav>
 
-  <main>
-    <h2>¿Qué es TecnoExpress?</h2>
-    <p>TecnoExpress es una plataforma dedicada a ofrecer soluciones tecnológicas, desde componentes hasta servicios técnicos de calidad.</p>
-    <p>Explora nuestro catálogo y descubre lo mejor en tecnología al mejor precio.</p>
-  </main>
+  <section class="hero">
+    <h1>Soluciones tecnológicas al alcance de un clic</h1>
+    <p>Descubre nuestros productos, servicios y soporte técnico especializado.</p>
+    <button class="cta-button" onclick="location.href='#contacto'">Contáctanos</button>
+  </section>
 
-  <footer>
+  <section class="section" id="nosotros">
+    <h2>¿Quiénes somos?</h2>
+    <div class="section-content">
+      <div>
+        <p>En TecnoExpress nos apasiona la tecnología. Somos un equipo dedicado a ofrecer soluciones rápidas y confiables para empresas y particulares.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section" id="servicios">
+    <h2>Servicios</h2>
+    <div class="section-content">
+      <div>
+        <h3>Venta de tecnología</h3>
+        <p>Ofrecemos laptops, componentes, accesorios y más.</p>
+      </div>
+      <div>
+        <h3>Soporte técnico</h3>
+        <p>Reparación, mantenimiento y asesoría técnica especializada.</p>
+      </div>
+      <div>
+        <h3>Consultoría IT</h3>
+        <p>Ayudamos a tu empresa a crecer con soluciones digitales efectivas.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section" id="contacto">
+    <h2>Contacto</h2>
+    <p>¿Tienes preguntas o necesitas una cotización? Escríbenos y te responderemos a la brevedad.</p>
+    <button class="cta-button">Enviar mensaje</button>
+  </section>
+
+  <footer class="footer">
     <p>&copy; 2025 TecnoExpress. Todos los derechos reservados.</p>
   </footer>
 
