--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <body>
 
   <header>
-    <img src="img/logo.png" alt="Logo TecnoExpress" />
+    <img src="img/logo.webp" alt="Logo TecnoExpress" />
     <h1>TecnoExpress</h1>
     <p>Tu tienda de tecnología rápida y confiable</p>
   </header>
