--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <h2>¿Quiénes somos?</h2>
     <div class="section-content">
       <div>
-        <p>En TecnoExpress nos apasiona la tecnología. Somos un equipo dedicado a ofrecer soluciones rápidas y confiables para empresas y particulares.</p>
+        <p>En TecnoExpress nos a apasiona la tecnología. Somos un equipo dedicado a ofrecer soluciones rápidas y confiables para empresas y particulares.</p>
       </div>
     </div>
   </section>
