--- a/index.html
+++ b/index.html
@@ -126,11 +126,16 @@
     <a href="#contacto">Contacto</a>
   </nav>
 
-  <section class="hero">
+<section class="banner">
+  <div class="slide active" style="background-image: url('img/banner1.webp');"></div>
+  <div class="slide" style="background-image: url('img/banner2.webp');"></div>
+  <div class="banner-text">
     <h1>Soluciones tecnológicas al alcance de un clic</h1>
     <p>Descubre nuestros productos, servicios y soporte técnico especializado.</p>
     <button class="cta-button" onclick="location.href='#contacto'">Contáctanos</button>
-  </section>
+  </div>
+</section>
+
 
   <section class="section" id="nosotros">
     <h2>¿Quiénes somos?</h2>
