--- a/index.html
+++ b/index.html
@@ -175,4 +175,15 @@
   </footer>
 
 </body>
+  <script>
+  let currentSlide = 0;
+  const slides = document.querySelectorAll('.slide');
+
+  setInterval(() => {
+    slides[currentSlide].classList.remove('active');
+    currentSlide = (currentSlide + 1) % slides.length;
+    slides[currentSlide].classList.add('active');
+  }, 5000); // cambia cada 5 segundos
+</script>
+
 </html>
