--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ENCABEZADO CON LOGO Y TÍTULO -->
   <header>
-    <img src="img/logo.png" alt="Logo TecnoExpress" />
+  <img src="img/logo.png" alt="Logo TecnoExpress" style="max-width: 80px; margin-bottom: 5px;" />
     <h1>TecnoExpress</h1>
     <p>Tu tienda de tecnología rápida y confiable</p>
   </header>
