--- a/index.html
+++ b/index.html
@@ -2,89 +2,73 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TecnoExpress</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-  <!-- ENCABEZADO CON LOGO Y TÍTULO -->
+  <!-- Encabezado con logo y navegación -->
   <header>
-    <img src="img/logo.png" alt="Logo TecnoExpress" />
-    <h1>TecnoExpress</h1>
-    <p>Tu tienda de tecnología rápida y confiable</p>
+    <div class="container">
+      <div class="logo">
+        <a href="#top">
+          <img src="img/logo.png" alt="Logo TecnoExpress" />
+        </a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#nosotros">Nosotros</a></li>
+          <li><a href="#servicios">Servicios</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <!-- MENÚ DE NAVEGACIÓN -->
-  <nav>
-    <a href="#nosotros">Nosotros</a>
-    <a href="#servicios">Servicios</a>
-    <a href="#contacto">Contacto</a>
-  </nav>
-
-  <!-- BANNER TIPO SLIDER -->
-  <section class="banner">
-    <div class="slide active" style="background-image: url('img/banner1.jpg');"></div>
-    <div class="slide" style="background-image: url('img/banner2.jpg');"></div>
-    <div class="banner-text">
+  <!-- Hero -->
+  <section class="hero">
+    <div class="hero-content">
       <h1>Soluciones tecnológicas al alcance de un clic</h1>
       <p>Descubre nuestros productos, servicios y soporte técnico especializado.</p>
-      <button class="cta-button" onclick="location.href='#contacto'">Contáctanos</button>
+      <a href="#contacto" class="btn">Contáctanos</a>
     </div>
   </section>
 
-  <!-- SECCIÓN NOSOTROS -->
-  <section class="section" id="nosotros">
-    <h2>¿Quiénes somos?</h2>
-    <div class="section-content">
-      <div>
-        <p>En TecnoExpress nos apasiona la tecnología. Somos un equipo dedicado a ofrecer soluciones rápidas y confiables para empresas y particulares.</p>
-      </div>
+  <!-- Sección Nosotros -->
+  <section id="nosotros">
+    <div class="container">
+      <h2>Nosotros</h2>
+      <p>Somos TecnoExpress, tu tienda de tecnología rápida y confiable.</p>
     </div>
   </section>
 
-  <!-- SECCIÓN SERVICIOS -->
-  <section class="section" id="servicios">
-    <h2>Servicios</h2>
-    <div class="section-content">
-      <div>
-        <h3>Venta de tecnología</h3>
-        <p>Ofrecemos laptops, componentes, accesorios y más.</p>
-      </div>
-      <div>
-        <h3>Soporte técnico</h3>
-        <p>Reparación, mantenimiento y asesoría técnica especializada.</p>
-      </div>
-      <div>
-        <h3>Consultoría IT</h3>
-        <p>Ayudamos a tu empresa a crecer con soluciones digitales efectivas.</p>
-      </div>
+  <!-- Sección Servicios -->
+  <section id="servicios">
+    <div class="container">
+      <h2>Servicios</h2>
+      <ul>
+        <li>Venta de tecnología</li>
+        <li>Soporte técnico</li>
+        <li>Asesoría personalizada</li>
+      </ul>
     </div>
   </section>
 
-  <!-- SECCIÓN CONTACTO -->
-  <section class="section" id="contacto">
-    <h2>Contacto</h2>
-    <p>¿Tienes preguntas o necesitas una cotización? Escríbenos y te responderemos a la brevedad.</p>
-    <button class="cta-button">Enviar mensaje</button>
+  <!-- Sección Contacto -->
+  <section id="contacto">
+    <div class="container">
+      <h2>Contacto</h2>
+      <p>Escríbenos a contacto@tecnoexpress.com o llama al 123-456-7890</p>
+    </div>
   </section>
 
-  <!-- PIE DE PÁGINA -->
-  <footer class="footer">
-    <p>&copy; 2025 TecnoExpress. Todos los derechos reservados.</p>
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 TecnoExpress. Todos los derechos reservados.</p>
+    </div>
   </footer>
-
-  <!-- SCRIPT PARA SLIDER -->
-  <script>
-    let currentSlide = 0;
-    const slides = document.querySelectorAll('.slide');
-
-    setInterval(() => {
-      slides[currentSlide].classList.remove('active');
-      currentSlide = (currentSlide + 1) % slides.length;
-      slides[currentSlide].classList.add('active');
-    }, 5000);
-  </script>
 
 </body>
 </html>
