--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
     </div>
   </section>
 
+  <!-- Banner 1 -->
+  <section class="banner">
+    <img src="img/banner1.jpg" alt="Banner promocional 1" />
+  </section>
+
+  <!-- Banner 2 -->
+  <section class="banner">
+    <img src="img/banner2.jpg" alt="Banner promocional 2" />
+  </section>
+
   <!-- Sección Nosotros -->
   <section id="nosotros">
     <div class="container">
