--- a/index.html
+++ b/index.html
@@ -35,14 +35,12 @@
     </div>
   </section>
 
-  <!-- Banner 1 -->
+  <!-- Banner Carrusel -->
   <section class="banner">
-    <img src="img/banner1.jpg" alt="Banner promocional 1" />
-  </section>
-
-  <!-- Banner 2 -->
-  <section class="banner">
-    <img src="img/banner2.jpg" alt="Banner promocional 2" />
+    <div class="slider">
+      <img src="img/banner1.jpg" alt="Banner promocional 1" />
+      <img src="img/banner2.jpg" alt="Banner promocional 2" />
+    </div>
   </section>
 
   <!-- Sección Nosotros -->
