--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <!-- Banner Carrusel -->
   <section class="banner">
     <div class="slider">
-      <img src="img/banner1.jpg" alt="Banner promocional 1" />
-      <img src="img/banner2.jpg" alt="Banner promocional 2" />
+      <img src="img/banner1.webp" alt="Banner promocional 1" />
+      <img src="img/banner2.webp" alt="Banner promocional 2" />
     </div>
   </section>
 
