--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <!-- Banner Carrusel -->
   <section class="banner">
     <div class="slider">
-      <img src="img/banner1.webp" alt="Banner promocional 1" />
-      <img src="img/banner2.webp" alt="Banner promocional 2" />
+      <img src="img/banner1.webp" alt="Ofertas especiales en laptops" />
+      <img src="img/banner2.webp" alt="Nuevos smartphones en stock" />
     </div>
   </section>
 
@@ -47,7 +47,7 @@
   <section id="nosotros">
     <div class="container">
       <h2>Nosotros</h2>
-      <p>Somos TecnoExpress, tu tienda de tecnología rápida y confiable.</p>
+      <p>Somos TecnoExpress, tu tienda de tecnología rápida y confiable. Con más de 10 años en el mercado, ofrecemos las mejores soluciones tecnológicas con servicio express.</p>
     </div>
   </section>
 
@@ -55,11 +55,20 @@
   <section id="servicios">
     <div class="container">
       <h2>Servicios</h2>
-      <ul>
-        <li>Venta de tecnología</li>
-        <li>Soporte técnico</li>
-        <li>Asesoría personalizada</li>
-      </ul>
+      <div class="servicios-grid">
+        <div class="servicio">
+          <h3>Venta de tecnología</h3>
+          <p>Los mejores equipos a precios competitivos</p>
+        </div>
+        <div class="servicio">
+          <h3>Soporte técnico</h3>
+          <p>Expertos disponibles 24/7</p>
+        </div>
+        <div class="servicio">
+          <h3>Asesoría personalizada</h3>
+          <p>Soluciones a medida para tus necesidades</p>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -67,7 +76,19 @@
   <section id="contacto">
     <div class="container">
       <h2>Contacto</h2>
-      <p>Escríbenos a contacto@tecnoexpress.com o llama al 123-456-7890</p>
+      <div class="contacto-content">
+        <div class="contacto-info">
+          <p>Escríbenos a <strong>contacto@tecnoexpress.com</strong></p>
+          <p>Llama al <strong>123-456-7890</strong></p>
+          <p>Horario: Lunes a Viernes 9am - 6pm</p>
+        </div>
+        <form class="contacto-form">
+          <input type="text" placeholder="Nombre" required>
+          <input type="email" placeholder="Email" required>
+          <textarea placeholder="Tu mensaje" required></textarea>
+          <button type="submit" class="btn">Enviar</button>
+        </form>
+      </div>
     </div>
   </section>
 
@@ -75,6 +96,11 @@
   <footer>
     <div class="container">
       <p>&copy; 2025 TecnoExpress. Todos los derechos reservados.</p>
+      <div class="social-links">
+        <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
+        <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+        <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+      </div>
     </div>
   </footer>
 
