--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TecnoExpress</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TecnoExpress - Soluciones Tecnológicas</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-  <!-- Encabezado con logo y navegación -->
   <header>
     <div class="container">
       <div class="logo">
-        <a href="#top">
-          <img src="img/logo.png" alt="Logo TecnoExpress" />
+        <a href="#">
+          <img src="img/logo.png" alt="TecnoExpress - Logo">
         </a>
       </div>
       <nav>
@@ -26,83 +24,122 @@
     </div>
   </header>
 
-  <!-- Hero -->
   <section class="hero">
     <div class="hero-content">
-      <h1>Soluciones tecnológicas al alcance de un clic</h1>
-      <p>Descubre nuestros productos, servicios y soporte técnico especializado.</p>
-      <a href="#contacto" class="btn">Contáctanos</a>
+      <h1>Innovación tecnológica a tu alcance</h1>
+      <p>Soluciones personalizadas para empresas y particulares</p>
+      <a href="#contacto" class="btn">Saber más</a>
     </div>
   </section>
 
-  <!-- Banner Carrusel -->
   <section class="banner">
     <div class="slider">
-      <img src="img/banner1.webp" alt="Ofertas especiales en laptops" />
-      <img src="img/banner2.webp" alt="Nuevos smartphones en stock" />
+      <img src="img/banner1.webp" alt="Ofertas especiales en equipos">
+      <img src="img/banner2.webp" alt="Nuevos productos tecnológicos">
     </div>
   </section>
 
-  <!-- Sección Nosotros -->
-  <section id="nosotros">
+  <section id="nosotros" class="section">
     <div class="container">
-      <h2>Nosotros</h2>
-      <p>Somos TecnoExpress, tu tienda de tecnología rápida y confiable. Con más de 10 años en el mercado, ofrecemos las mejores soluciones tecnológicas con servicio express.</p>
+      <h2>Sobre Nosotros</h2>
+      <div class="content-grid">
+        <div class="text-content">
+          <p>En TecnoExpress llevamos más de una década proporcionando soluciones tecnológicas innovadoras a nuestros clientes. Nuestro equipo de expertos está comprometido con la excelencia y el servicio personalizado.</p>
+          <p>Nos especializamos en integrar tecnología de punta con soluciones accesibles para todos los presupuestos.</p>
+        </div>
+        <div class="image-content">
+          <img src="img/equipo.jpg" alt="Nuestro equipo de trabajo">
+        </div>
+      </div>
     </div>
   </section>
 
-  <!-- Sección Servicios -->
-  <section id="servicios">
+  <section id="servicios" class="section alt-bg">
     <div class="container">
-      <h2>Servicios</h2>
-      <div class="servicios-grid">
-        <div class="servicio">
-          <h3>Venta de tecnología</h3>
-          <p>Los mejores equipos a precios competitivos</p>
+      <h2>Nuestros Servicios</h2>
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="service-icon">
+            <img src="img/icon-ventas.png" alt="Icono ventas">
+          </div>
+          <h3>Venta de Equipos</h3>
+          <p>Las mejores marcas al mejor precio garantizado</p>
         </div>
-        <div class="servicio">
-          <h3>Soporte técnico</h3>
-          <p>Expertos disponibles 24/7</p>
+        <div class="service-card">
+          <div class="service-icon">
+            <img src="img/icon-soporte.png" alt="Icono soporte">
+          </div>
+          <h3>Soporte Técnico</h3>
+          <p>Asistencia especializada 24/7 para tus equipos</p>
         </div>
-        <div class="servicio">
-          <h3>Asesoría personalizada</h3>
+        <div class="service-card">
+          <div class="service-icon">
+            <img src="img/icon-asesoria.png" alt="Icono asesoría">
+          </div>
+          <h3>Asesoría Personalizada</h3>
           <p>Soluciones a medida para tus necesidades</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Sección Contacto -->
-  <section id="contacto">
+  <section id="contacto" class="section">
     <div class="container">
-      <h2>Contacto</h2>
-      <div class="contacto-content">
-        <div class="contacto-info">
-          <p>Escríbenos a <strong>contacto@tecnoexpress.com</strong></p>
-          <p>Llama al <strong>123-456-7890</strong></p>
-          <p>Horario: Lunes a Viernes 9am - 6pm</p>
+      <h2>Contáctanos</h2>
+      <div class="contact-grid">
+        <div class="contact-info">
+          <h3>Información de contacto</h3>
+          <p><i class="icon">📍</i> Av. Tecnológica 123, Ciudad</p>
+          <p><i class="icon">📞</i> (123) 456-7890</p>
+          <p><i class="icon">✉️</i> info@tecnoexpress.com</p>
+          <div class="social-links">
+            <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="img/linkedin.png" alt="LinkedIn"></a>
+          </div>
         </div>
-        <form class="contacto-form">
-          <input type="text" placeholder="Nombre" required>
-          <input type="email" placeholder="Email" required>
-          <textarea placeholder="Tu mensaje" required></textarea>
-          <button type="submit" class="btn">Enviar</button>
+        <form class="contact-form">
+          <div class="form-group">
+            <input type="text" placeholder="Nombre completo" required>
+          </div>
+          <div class="form-group">
+            <input type="email" placeholder="Correo electrónico" required>
+          </div>
+          <div class="form-group">
+            <textarea placeholder="Tu mensaje" required></textarea>
+          </div>
+          <button type="submit" class="btn">Enviar Mensaje</button>
         </form>
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 TecnoExpress. Todos los derechos reservados.</p>
-      <div class="social-links">
-        <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-        <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-        <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+      <div class="footer-content">
+        <div class="footer-logo">
+          <img src="img/logo-footer.png" alt="TecnoExpress">
+        </div>
+        <div class="footer-links">
+          <h3>Enlaces rápidos</h3>
+          <ul>
+            <li><a href="#nosotros">Nosotros</a></li>
+            <li><a href="#servicios">Servicios</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+          </ul>
+        </div>
+        <div class="footer-newsletter">
+          <h3>Suscríbete</h3>
+          <form>
+            <input type="email" placeholder="Tu correo electrónico">
+            <button type="submit" class="btn-small">Suscribir</button>
+          </form>
+        </div>
+      </div>
+      <div class="copyright">
+        <p>&copy; 2023 TecnoExpress. Todos los derechos reservados.</p>
       </div>
     </div>
   </footer>
-
 </body>
 </html>
