--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <div class="logo">
         <a href="#">
-          <img src="img/logo.png" alt="TecnoExpress - Logo">
+          <img src="img/logo.png" alt="TecnoExpress">
         </a>
       </div>
       <nav>
@@ -32,114 +32,14 @@
     </div>
   </section>
 
+  <!-- Carrusel de 2 imágenes -->
   <section class="banner">
     <div class="slider">
-      <img src="img/banner1.webp" alt="Ofertas especiales en equipos">
-      <img src="img/banner2.webp" alt="Nuevos productos tecnológicos">
+      <img src="img/banner1.webp" alt="Ofertas especiales en tecnología">
+      <img src="img/banner2.webp" alt="Últimos dispositivos tecnológicos">
     </div>
   </section>
 
-  <section id="nosotros" class="section">
-    <div class="container">
-      <h2>Sobre Nosotros</h2>
-      <div class="content-grid">
-        <div class="text-content">
-          <p>En TecnoExpress llevamos más de una década proporcionando soluciones tecnológicas innovadoras a nuestros clientes. Nuestro equipo de expertos está comprometido con la excelencia y el servicio personalizado.</p>
-          <p>Nos especializamos en integrar tecnología de punta con soluciones accesibles para todos los presupuestos.</p>
-        </div>
-        <div class="image-content">
-          <img src="img/equipo.jpg" alt="Nuestro equipo de trabajo">
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="servicios" class="section alt-bg">
-    <div class="container">
-      <h2>Nuestros Servicios</h2>
-      <div class="services-grid">
-        <div class="service-card">
-          <div class="service-icon">
-            <img src="img/icon-ventas.png" alt="Icono ventas">
-          </div>
-          <h3>Venta de Equipos</h3>
-          <p>Las mejores marcas al mejor precio garantizado</p>
-        </div>
-        <div class="service-card">
-          <div class="service-icon">
-            <img src="img/icon-soporte.png" alt="Icono soporte">
-          </div>
-          <h3>Soporte Técnico</h3>
-          <p>Asistencia especializada 24/7 para tus equipos</p>
-        </div>
-        <div class="service-card">
-          <div class="service-icon">
-            <img src="img/icon-asesoria.png" alt="Icono asesoría">
-          </div>
-          <h3>Asesoría Personalizada</h3>
-          <p>Soluciones a medida para tus necesidades</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="contacto" class="section">
-    <div class="container">
-      <h2>Contáctanos</h2>
-      <div class="contact-grid">
-        <div class="contact-info">
-          <h3>Información de contacto</h3>
-          <p><i class="icon">📍</i> Av. Tecnológica 123, Ciudad</p>
-          <p><i class="icon">📞</i> (123) 456-7890</p>
-          <p><i class="icon">✉️</i> info@tecnoexpress.com</p>
-          <div class="social-links">
-            <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-            <a href="#"><img src="img/linkedin.png" alt="LinkedIn"></a>
-          </div>
-        </div>
-        <form class="contact-form">
-          <div class="form-group">
-            <input type="text" placeholder="Nombre completo" required>
-          </div>
-          <div class="form-group">
-            <input type="email" placeholder="Correo electrónico" required>
-          </div>
-          <div class="form-group">
-            <textarea placeholder="Tu mensaje" required></textarea>
-          </div>
-          <button type="submit" class="btn">Enviar Mensaje</button>
-        </form>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-logo">
-          <img src="img/logo-footer.png" alt="TecnoExpress">
-        </div>
-        <div class="footer-links">
-          <h3>Enlaces rápidos</h3>
-          <ul>
-            <li><a href="#nosotros">Nosotros</a></li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-          </ul>
-        </div>
-        <div class="footer-newsletter">
-          <h3>Suscríbete</h3>
-          <form>
-            <input type="email" placeholder="Tu correo electrónico">
-            <button type="submit" class="btn-small">Suscribir</button>
-          </form>
-        </div>
-      </div>
-      <div class="copyright">
-        <p>&copy; 2023 TecnoExpress. Todos los derechos reservados.</p>
-      </div>
-    </div>
-  </footer>
+  <!-- Resto de las secciones... -->
 </body>
 </html>
